# unitsnet-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
codegen/: DefinitionsDownloader.cs  Program.cs  codegen.csproj  codegen.slnx
codegen/Templates/: unit.hpp.scriban
codegen/models/: GeneratedUnit.cs  UnitDefinition.cs  UnitDefinitionUnit.cs  UnitLocalization.cs
codegen/unitnet-cpp-codegen/: unitnet-cpp-codegen.csproj  unitnet-cpp-codegen.slnx
src/: UnitsNetBase.h  UnitsNetConfig.h
tests/: CMakeLists.txt  unitsnet_tests.cpp
tests/csharp/: Program.cs  UnitsNet.CSharpInterop.csproj
tests/python/: unitsnet_interop.py
