cmake_minimum_required(VERSION 3.31.6)

project(
        unitsnet_cpp
        VERSION 1.0.0
        LANGUAGES CXX
)

# ---------------------------------------------------------------------------
# Generated headers
# ---------------------------------------------------------------------------

set(UNITSNET_GENERATED_DIR
        "${CMAKE_CURRENT_SOURCE_DIR}/src/generated"
)

file(
        GLOB_RECURSE UNITSNET_HEADERS
        CONFIGURE_DEPENDS
        RELATIVE "${UNITSNET_GENERATED_DIR}"
        "${UNITSNET_GENERATED_DIR}/*.h"
        "${UNITSNET_GENERATED_DIR}/*.hpp"
)

if (NOT UNITSNET_HEADERS)
    message(WARNING
            "No generated headers were found in: ${UNITSNET_GENERATED_DIR}"
    )
endif ()

# Convert relative header names to absolute paths for target_sources().
set(UNITSNET_HEADER_PATHS "")

foreach (header IN LISTS UNITSNET_HEADERS)
    list(APPEND
            UNITSNET_HEADER_PATHS
            "${UNITSNET_GENERATED_DIR}/${header}"
    )
endforeach ()

# ---------------------------------------------------------------------------
# Header-only library
# ---------------------------------------------------------------------------

add_library(unitsnet_cpp INTERFACE)

add_library(
        UnitsNet::UnitsNet
        ALIAS unitsnet_cpp
)

target_compile_features(
        unitsnet_cpp
        INTERFACE
        cxx_std_20
)

target_include_directories(
        unitsnet_cpp
        INTERFACE
        $<BUILD_INTERFACE:${UNITSNET_GENERATED_DIR}>
        $<INSTALL_INTERFACE:include>
)

if (UNITSNET_HEADER_PATHS)
    target_sources(
            unitsnet_cpp
            INTERFACE
            FILE_SET HEADERS
            BASE_DIRS "${UNITSNET_GENERATED_DIR}"
            FILES ${UNITSNET_HEADER_PATHS}
    )
endif ()

# ---------------------------------------------------------------------------
# Generated-header compile check
#
# This creates one .cpp file that includes every generated header. Compiling
# this target catches syntax errors, missing includes, duplicate declarations,
# and header include-order problems.
# ---------------------------------------------------------------------------

set(UNITSNET_COMPILE_CHECK_FILE
        "${CMAKE_CURRENT_BINARY_DIR}/unitsnet_generated_compile_check.cpp"
)

file(
        WRITE
        "${UNITSNET_COMPILE_CHECK_FILE}"
        "// Automatically generated by CMake.\n"
        "// Includes every UnitsNet generated header.\n\n"
)

foreach (header IN LISTS UNITSNET_HEADERS)
    file(
            APPEND
            "${UNITSNET_COMPILE_CHECK_FILE}"
            "#include <${header}>\n"
    )
endforeach ()

file(
        APPEND
        "${UNITSNET_COMPILE_CHECK_FILE}"
        "\nnamespace unitsnet_compile_check\n"
        "{\n"
        "    void compile_all_generated_headers()\n"
        "    {\n"
        "    }\n"
        "}\n"
)

add_library(
        unitsnet_cpp_compile_check
        OBJECT
        "${UNITSNET_COMPILE_CHECK_FILE}"
)

target_link_libraries(
        unitsnet_cpp_compile_check
        PRIVATE
        UnitsNet::UnitsNet
)

target_compile_features(
        unitsnet_cpp_compile_check
        PRIVATE
        cxx_std_20
)

# Enable reasonably strict warnings for the generated code.
if (MSVC)
    target_compile_options(
            unitsnet_cpp_compile_check
            PRIVATE
            /W4
            /permissive-
    )
else ()
    target_compile_options(
            unitsnet_cpp_compile_check
            PRIVATE
            -Wall
            -Wextra
            -Wpedantic
    )
endif ()
