cmake_minimum_required(VERSION 3.31.6)

project(
        unitsnet_cpp
        VERSION 1.0.0
        LANGUAGES CXX
)

option(
        UNITSNET_CPP_BUILD_TESTS
        "Build the unitsnet-cpp unit tests"
        ${PROJECT_IS_TOP_LEVEL}
)

option(
        UNITSNET_ENABLE_DTO
        "Enable UnitsNet data-transfer objects"
        OFF
)

option(
        UNITSNET_ENABLE_NLOHMANN_JSON
        "Enable nlohmann/json serialization for UnitsNet DTOs"
        OFF
)

if (UNITSNET_ENABLE_NLOHMANN_JSON)
    set(UNITSNET_ENABLE_DTO ON)
endif ()

# ---------------------------------------------------------------------------
# Generated headers
# ---------------------------------------------------------------------------

set(UNITSNET_GENERATED_DIR
        "${CMAKE_CURRENT_SOURCE_DIR}/src/generated"
)

file(
        GLOB_RECURSE UNITSNET_HEADERS
        CONFIGURE_DEPENDS
        RELATIVE "${UNITSNET_GENERATED_DIR}"
        "${UNITSNET_GENERATED_DIR}/*.h"
        "${UNITSNET_GENERATED_DIR}/*.hpp"
)

if (NOT UNITSNET_HEADERS)
    message(WARNING
            "No generated headers were found in: ${UNITSNET_GENERATED_DIR}"
    )
endif ()

# Convert relative header names to absolute paths for target_sources().
set(UNITSNET_HEADER_PATHS "")

foreach (header IN LISTS UNITSNET_HEADERS)
    list(APPEND
            UNITSNET_HEADER_PATHS
            "${UNITSNET_GENERATED_DIR}/${header}"
    )
endforeach ()

# ---------------------------------------------------------------------------
# Header-only library
# ---------------------------------------------------------------------------

# Download CPM.cmake
set(CPM_VERSION 0.43.1)
message("Downloading CPM Package Manager version ${CPM_VERSION}")
file(
        DOWNLOAD
        https://github.com/cpm-cmake/CPM.cmake/releases/download/v${CPM_VERSION}/CPM.cmake
        ${CMAKE_CURRENT_BINARY_DIR}/CPM_${CPM_VERSION}.cmake
)
include("${CMAKE_CURRENT_BINARY_DIR}/CPM_${CPM_VERSION}.cmake")

if (UNITSNET_ENABLE_DTO AND NOT TARGET magic_enum::magic_enum)
    CPMAddPackage(
            NAME magic_enum
            GITHUB_REPOSITORY Neargye/magic_enum
            GIT_TAG v0.9.8
    )
endif ()

if (UNITSNET_ENABLE_NLOHMANN_JSON AND NOT TARGET nlohmann_json::nlohmann_json)
    CPMAddPackage(
            NAME nlohmann_json
            GITHUB_REPOSITORY nlohmann/json
            GIT_TAG v3.12.0
            OPTIONS
            "JSON_BuildTests OFF"
            "JSON_Install OFF"
    )
endif ()

add_library(unitsnet_cpp INTERFACE)

add_library(
        UnitsNet::UnitsNet
        ALIAS unitsnet_cpp
)

target_compile_features(
        unitsnet_cpp
        INTERFACE
        cxx_std_20
)

if (UNITSNET_ENABLE_DTO)
    target_link_libraries(
            unitsnet_cpp
            INTERFACE
            magic_enum::magic_enum
    )

    target_compile_definitions(
            unitsnet_cpp
            INTERFACE
            UNITSNET_ENABLE_DTO
    )
endif ()

if (UNITSNET_ENABLE_NLOHMANN_JSON)
    target_link_libraries(
            unitsnet_cpp
            INTERFACE
            nlohmann_json::nlohmann_json
    )

    target_compile_definitions(
        unitsnet_cpp
        INTERFACE
            UNITSNET_ENABLE_NLOHMANN_JSON
    )
endif ()

target_include_directories(
        unitsnet_cpp
        INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
        $<BUILD_INTERFACE:${UNITSNET_GENERATED_DIR}>
        $<INSTALL_INTERFACE:include>
)

target_sources(
        unitsnet_cpp
        INTERFACE
        FILE_SET config_headers
        TYPE HEADERS
        BASE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/src"
        FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/UnitsNetConfig.h"
)

if (UNITSNET_HEADER_PATHS)
    target_sources(
            unitsnet_cpp
            INTERFACE
            FILE_SET generated_headers
            TYPE HEADERS
            BASE_DIRS "${UNITSNET_GENERATED_DIR}"
            FILES ${UNITSNET_HEADER_PATHS}
    )
endif ()

# ---------------------------------------------------------------------------
# Generated-header compile check
#
# This creates one .cpp file that includes every generated header. Compiling
# this target catches syntax errors, missing includes, duplicate declarations,
# and header include-order problems.
# ---------------------------------------------------------------------------

set(UNITSNET_COMPILE_CHECK_FILE
        "${CMAKE_CURRENT_BINARY_DIR}/unitsnet_generated_compile_check.cpp"
)

file(
        WRITE
        "${UNITSNET_COMPILE_CHECK_FILE}"
        "// Automatically generated by CMake.\n"
        "// Includes every UnitsNet generated header.\n\n"
)

foreach (header IN LISTS UNITSNET_HEADERS)
    file(
            APPEND
            "${UNITSNET_COMPILE_CHECK_FILE}"
            "#include <${header}>\n"
    )
endforeach ()

file(
        APPEND
        "${UNITSNET_COMPILE_CHECK_FILE}"
        "\nnamespace unitsnet_compile_check\n"
        "{\n"
        "    void compile_all_generated_headers()\n"
        "    {\n"
        "    }\n"
        "}\n"
)

add_library(
        unitsnet_cpp_compile_check
        OBJECT
        "${UNITSNET_COMPILE_CHECK_FILE}"
)

target_link_libraries(
        unitsnet_cpp_compile_check
        PRIVATE
        UnitsNet::UnitsNet
)

target_compile_features(
        unitsnet_cpp_compile_check
        PRIVATE
        cxx_std_20
)

# Enable reasonably strict warnings for the generated code.
if (MSVC)
    target_compile_options(
            unitsnet_cpp_compile_check
            PRIVATE
            /W4
            /permissive-
    )
else ()
    target_compile_options(
            unitsnet_cpp_compile_check
            PRIVATE
            -Wall
            -Wextra
            -Wpedantic
    )
endif ()

# ---------------------------------------------------------------------------
# Tests
#
# Tests are enabled for standalone builds and disabled when unitsnet-cpp is
# included as a dependency (for example through CPM.cmake).
# ---------------------------------------------------------------------------

if (UNITSNET_CPP_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif ()
