cmake_minimum_required(VERSION 3.31.6)

project(
        unitsnet_cpp_tests
        LANGUAGES CXX
)

find_package(Python3 3.8 REQUIRED COMPONENTS Interpreter)

# Permit configuring this directory directly with: cmake -S tests -B build
if (PROJECT_IS_TOP_LEVEL)
    set(UNITSNET_CPP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/.." "${CMAKE_CURRENT_BINARY_DIR}/unitsnet_cpp")
    enable_testing()
endif ()

if (NOT TARGET UnitsNet::UnitsNet)
    message(FATAL_ERROR "The UnitsNet::UnitsNet target is required by the test project.")
endif ()

if (NOT COMMAND CPMAddPackage)
    message(FATAL_ERROR "CPMAddPackage is required by the test project.")
endif ()

if (NOT TARGET magic_enum::magic_enum)
    CPMAddPackage(
            NAME magic_enum
            GITHUB_REPOSITORY Neargye/magic_enum
            GIT_TAG v0.9.8
    )
endif ()

if (NOT TARGET nlohmann_json::nlohmann_json)
    CPMAddPackage(
            NAME nlohmann_json
            GITHUB_REPOSITORY nlohmann/json
            GIT_TAG v3.12.0
            OPTIONS
            "JSON_BuildTests OFF"
            "JSON_Install OFF"
    )
endif ()

if (NOT TARGET Catch2::Catch2WithMain)
    CPMAddPackage(
            NAME Catch2
            GITHUB_REPOSITORY catchorg/Catch2
            GIT_TAG v3.15.2
    )
endif ()

CPMAddPackage(
        NAME unitsnet_py
        GITHUB_REPOSITORY haimkastner/unitsnet-py
        GIT_TAG 1.0.5
        DOWNLOAD_ONLY YES
)

# This interface target is the test fixture for optional library features.
# It enables DTO and JSON APIs without changing the public library target.
add_library(unitsnet_cpp_test_features INTERFACE)

target_link_libraries(
        unitsnet_cpp_test_features
        INTERFACE
        UnitsNet::UnitsNet
        magic_enum::magic_enum
        nlohmann_json::nlohmann_json
)

target_compile_definitions(
        unitsnet_cpp_test_features
        INTERFACE
        UNITSNET_ENABLE_DTO
        UNITSNET_ENABLE_NLOHMANN_JSON
)

function(unitsnet_cpp_enable_test_warnings target_name)
    if (MSVC)
        target_compile_options(${target_name} PRIVATE /W4 /permissive-)
    else ()
        target_compile_options(${target_name} PRIVATE -Wall -Wextra -Wpedantic)
    endif ()
endfunction()

include("${Catch2_SOURCE_DIR}/extras/Catch.cmake")

function(unitsnet_cpp_add_test_target target_name test_prefix)
    add_executable(${target_name} unitsnet_tests.cpp)

    target_link_libraries(
            ${target_name}
            PRIVATE
            unitsnet_cpp_test_features
            Catch2::Catch2WithMain
    )

    target_compile_features(${target_name} PRIVATE cxx_std_20)
    target_compile_definitions(
            ${target_name}
            PRIVATE
            UNITSNET_TEST_CMAKE_COMMAND="${CMAKE_COMMAND}"
            UNITSNET_TEST_PYTHON_EXECUTABLE="${Python3_EXECUTABLE}"
            UNITSNET_TEST_PYTHON_SCRIPT="${CMAKE_CURRENT_LIST_DIR}/python/unitsnet_interop.py"
            UNITSNET_TEST_UNITSNET_PY_SOURCE_DIR="${unitsnet_py_SOURCE_DIR}"
            UNITSNET_TEST_INTEROP_WORK_DIR="${CMAKE_CURRENT_BINARY_DIR}/python_interop"
            UNITSNET_TEST_VARIANT="${target_name}"
    )
    unitsnet_cpp_enable_test_warnings(${target_name})

    catch_discover_tests(
            ${target_name}
            TEST_PREFIX "${test_prefix}."
    )
endfunction()

unitsnet_cpp_add_test_target(unitsnet_cpp_tests "unitsnet_cpp.double")
unitsnet_cpp_add_test_target(unitsnet_cpp_tests_float "unitsnet_cpp.float")

target_compile_definitions(
        unitsnet_cpp_tests_float
        PRIVATE
        UNITSNET_CPP_USE_FLOAT
)

# Compile every generated header with DTO and JSON enabled as well.
set(UNITSNET_TEST_GENERATED_DIR "${CMAKE_CURRENT_LIST_DIR}/../src/generated")
file(GLOB UNITSNET_TEST_HEADERS CONFIGURE_DEPENDS "${UNITSNET_TEST_GENERATED_DIR}/*.hpp")
set(UNITSNET_JSON_COMPILE_CHECK "${CMAKE_CURRENT_BINARY_DIR}/unitsnet_json_compile_check.cpp")

file(WRITE "${UNITSNET_JSON_COMPILE_CHECK}" "// Generated by tests/CMakeLists.txt.\n")
foreach (header IN LISTS UNITSNET_TEST_HEADERS)
    get_filename_component(header_name "${header}" NAME)
    file(APPEND "${UNITSNET_JSON_COMPILE_CHECK}" "#include <${header_name}>\n")
endforeach ()

add_library(unitsnet_cpp_json_compile_check OBJECT "${UNITSNET_JSON_COMPILE_CHECK}")
target_link_libraries(unitsnet_cpp_json_compile_check PRIVATE unitsnet_cpp_test_features)
target_compile_features(unitsnet_cpp_json_compile_check PRIVATE cxx_std_20)
unitsnet_cpp_enable_test_warnings(unitsnet_cpp_json_compile_check)
